[tool.poetry]
name = "geocoder"
version = "2.0.0"
description = "Tell me when the sun is rise. And fall, I guess."
authors = ["Denis Carriere", "AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"
ratelim = "0.1.6"

[tool.poetry.group.dev.dependencies]
pylint = "^2.14.5"
yapf = "^0.32.0"
isort = "^5.10.1"
pyupgrade = "^2.37.3"
certifi = "^2022.12.7"
chardet = "^5.1.0"
decorator = "^5.1.1"
idna = "^3.4"
flake8 = "^6.0.0"
pytest = "^7.2.0"
codecov = "^2.1.12"
coveralls = "^8.1.3"
pytest-cov = "^4.0.0"
urllib3 = "^1.26.13"
requests-mock = "^1.10.0"
sphinx = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
indent_width = 2
continuation_indent_width = 2
column_limit = 120
blank_line_before_nested_class_or_def = false
blank_lines_around_top_level_definition = 1
coalesce_brackets = true
dedent_closing_brackets = true
indent_dictionary_value = true
indent_blank_lines = true
space_between_ending_comma_and_closing_bracket = true
spaces_around_default_or_named_assign = true
spaces_before_comment = 1

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 120
from_first = true
indent = "  "
