[tool.poetry]
name = "geocoder"
version = "2.0.1"
description = "Tell me when the sun is rise. And fall, I guess."
authors = ["Denis Carriere", "AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
ratelim = "0.1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pylint = "^3.0.3"
certifi = "^2022.12.7"
chardet = "^5.1.0"
decorator = "^5.1.1"
idna = "^3.4"
flake8 = "^6.0.0"
pytest = "^7.2.0"
codecov = "^2.1.12"
coveralls = "^8.1.3"
pytest-cov = "^4.0.0"
urllib3 = "^1.26.13"
requests-mock = "^1.10.0"
sphinx = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
format.line-ending = "lf"
target-version = "py310"
line-length = 160
preview = true

[tool.ruff.lint]
select = ["F", "E", "W", "N", "UP", "B", "SIM", "PD", "PL", "TRY", "FLY", "NPY", "PERF", "FURB", "RUF"]
ignore = ["N803", "N806", "E111", "E114", "Q", "W293", "E261", "PLR2004", "PLR0912"]
# unfixable = ["B", "SIM", "TRY"]
# extend-select = ["UP"]

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "
